# pagemon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pagemon/: __init__.py  __main__.py  cli.py  core.py  diff.py  models.py  notify.py  storage.py
tests/: conftest.py  test_cli.py  test_core.py  test_diff.py  test_models.py  test_storage.py
