[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagemon"
version = "0.1.0"
description = "Monitor web pages for changes from your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lucas", email = "lucastrba2@gmail.com" }]
keywords = ["cli", "web", "monitor", "diff", "scraping", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pagemon = "pagemon.cli:cli"

[project.urls]
Homepage = "https://github.com/Ltbltbltbltb/pagemon"
Repository = "https://github.com/Ltbltbltbltb/pagemon"
Issues = "https://github.com/Ltbltbltbltb/pagemon/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
